Fix: Concept raw data chips overflow (#937)
* fix concept raw data chips overflow

* remove concepts.css unnecessary comments

* fix concept raw data chips overflow in all ontology content tabs

--- a/app/assets/stylesheets/concepts.scss
+++ b/app/assets/stylesheets/concepts.scss
@@ -167,3 +167,11 @@ div.synonym-change-request button {
   margin-top: -4px;
 }
 
+.concept_details_component{
+  .chip-button-component-container{
+    word-break: break-word !important;
+    overflow-wrap: break-word !important;
+    white-space: normal !important;
+  }
+}
+
